# Ultima-Online-Remake-CPP

./: .gitignore  CMakeLists.txt  README.md  build.bat
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/assets/: map.map
assets/: world_test.tmx
docs/: GetInterpolatedHeight.md  tiled_map_guide.md
docs/superpowers/: tileset_viewer.html
docs/superpowers/plans/: 2026-05-31-camera-tracking-plan.md  2026-05-31-keyboard-movement-and-fullscreen-map-plan.md  2026-06-03-smooth-zoom-plan.md  2026-06-04-z-axis-staircase-plan.md
docs/superpowers/specs/: 2026-05-31-camera-tracking-design.md  2026-06-02-ultima-online-full-game-systems-spec.md  2026-06-02-ultima-online-remake-design.md  2026-06-03-smooth-zoom-design.md  2026-06-04-z-axis-staircase-design.md
src/: main.cpp
src/Common/Math/: Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp
src/Common/Network/: NetworkBuffer.hpp  Packets.hpp
src/Common/Physics/: Collision.cpp  Collision.hpp
src/Common/World/: MapData.cpp  MapData.hpp  WorldConfig.cpp  WorldConfig.hpp
src/Core/: AssetManager.cpp  AssetManager.hpp  Camera.hpp  Game.cpp  Game.hpp  TextureManager.cpp  TextureManager.hpp
src/ECS/: ECS.hpp
src/ECS/Components/: Animation.hpp  ColliderComponent.hpp  KeyboardController.hpp  NetworkComponent.hpp  ProjectileComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp  UILabel.hpp
src/Server/: main.cpp
src/Server/Core/: ServerApp.cpp  ServerApp.hpp
src/World/: Map.cpp  Map.hpp
